testsuite/tests/typecheck/should_fail/tcfail103.stderr

tcfail103.hs:15:13: error:
    Couldn't match type ‘t’ with ‘s’
    ‘t’ is a rigid type variable bound by
        the type signature for: f :: ST t Int at tcfail103.hs:10:5
    ‘s’ is a rigid type variable bound by
        the type signature for: g :: ST s Int at tcfail103.hs:13:14
    Expected type: ST s Int
      Actual type: ST t Int
    Relevant bindings include
      g :: ST s Int (bound at tcfail103.hs:15:9)
      v :: STRef t Int (bound at tcfail103.hs:12:5)
      f :: ST t Int (bound at tcfail103.hs:11:1)
    In the expression: readSTRef v
    In an equation for ‘g’: g = readSTRef v
    In the expression:
      do { v <- newSTRef 5;
           let g :: ST s Int
               g = readSTRef v;
           g }
